--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
             position: relative;
             padding: 20px;
             max-width: 800px;
-            background-color: rgba(255, 255, 255, 0.8);
             border-radius: 10px;
             
         }
 
-        /* Styling the Opening Soon text */
         .opening-soon {
             font-size: 64px;
             color: #b35d5d;
@@ -37,7 +35,7 @@
             text-align: center;
         }
     </style>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner:wght@400..700&display=swap" rel="stylesheet"></head>
 </head>
 <body>
     <div class="container">
